--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,1 +1,4 @@
-<text>components/like/index.wxml</text>
+<view bind:tap="onLike" class="container">
+  <image src="images/like.png" />
+  <text>99k</text>
+</view>
