--- a/components/like/index.wxss
+++ b/components/like/index.wxss
@@ -1,1 +1,18 @@
 /* components/like/index.wxss */
+.container {
+  display: inline-flex;
+  flex-direction: row;
+  padding: 10rpx;
+}
+.container image {
+  width: 32rpx;
+  height: 28rpx;
+}
+.container text {
+  font-size: 24rpx;
+  color: #bbbbbb;
+  line-height: 24rpx;
+  position: relaive;
+  bottom: 16rpx;
+  left: 6rpx;
+}
