--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,4 +1,4 @@
 <view bind:tap="onLike" class="container">
-  <image src="images/like.png" />
-  <text>99k</text>
+  <image src="{{like?yesSrc:noSrc}}" />
+  <text>{{count}}k</text>
 </view>
