--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,4 +1,4 @@
 <view bind:tap="onLike" class="container">
   <image src="{{like?yesSrc:noSrc}}" />
-  <text>{{count}}k</text>
+  <text>{{count}}</text>
 </view>
