--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,2 +1,5 @@
-<v-like bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
-<v-movie img="{{classic.image}}" content="{{classic.content}}"></v-movie>
+<view class="header">
+  <v-epsoide class="eposide" index="{{classic.index}}"></v-epsoide>
+  <v-like class="like" bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
+</view>
+<v-movie class="movie" img="{{classic.image}}" content="{{classic.content}}"></v-movie>
