--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,5 +1,12 @@
 /* pages/classic/classic.wxss */
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .header {
+  width: 100%;
   display: flex;
   flex-direction: row;
   height: 100rpx;
@@ -7,6 +14,7 @@
   justify-content: space-between;
   border-top: 1px solid #f5f5f5;
   border-bottom: 1px solid #f5f5f5;
+  margin-left: 30rpx;
 }
 .epsoide {
   margin-left: 20rpx;
@@ -14,4 +22,8 @@
 }
 .like {
   margin-top: 6rpx;
+}
+.navi {
+  position: absolute;
+  bottom: 40rpx;
 }
