--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,6 +1,6 @@
 <view hidden="{{hidden}}" class="container">
   <image src="{{img}}" class="classic-img" />
-  <image src="{{playSrc}}" class="player-img" />
+  <image src="{{!playing?playSrc:pauseSrc}}" bind:tap="onPlay" class="player-img" />
   <image src="images/music@tag.png" class="tag" />
   <text>{{content}}</text>
 </view>
