--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -4,7 +4,7 @@
     <v-like class="like" bind:like="onLike" like="{{likeStatus}}" count="{{likeCount}}" />
   </view>
   <v-movie class="movie" hidden="{{classic.type!=100}}" img="{{classic.image}}" content="{{classic.content}}"></v-movie>
-  <v-music hidden="{{classic.type!=200}}" img="{{classic.image}}" content="{{classic.content}}"></v-music>
+  <v-music hidden="{{classic.type!=200}}" src="{{classic.url}}" img="{{classic.image}}" content="{{classic.content}}"></v-music>
   <v-essay hidden="{{classic.type!=300}}" img="{{classic.image}}" content="{{classic.content}}"></v-essay>
   <v-navi bind:left="onNext" bind:right="onPrevious" class="navi" title="{{classic.title}}" first="{{first}}" latest="{{latest}}" />
 </view>
