--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -7,11 +7,16 @@
     </view>
     <view bind:tap="onCancel" class="cancel">取消</view>
   </view>
-  <view>
+  <view wx:if="{{!searching}}">
     <view class="history">
       <view class="title">
         <view class="chunk"></view>
         <text>历史搜索</text>
+      </view>
+      <view class="tags">
+        <block wx:key="" wx:for="{{historyWords}}">
+          <v-tag bind:tapping="onConfirm" text="{{item}}" />
+        </block>
       </view>
     </view>
     <view class="history hot-search">
@@ -19,6 +24,16 @@
         <view class="chunk"></view>
         <text>热门搜索</text>
       </view>
+      <view class="tags">
+        <block wx:key="" wx:for="{{hotWords}}">
+          <v-tag bind:tapping="onConfirm" text="{{item}}" />
+        </block>
+      </view>
     </view>
+  </view>
+  <view wx:if="{{searching}}" class="books-container">
+    <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
+      <v-book book="{{item}}" class="book" />
+    </block>
   </view>
 </view>
