--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -2,8 +2,8 @@
   <view class="header">
     <view class="search-container">
       <image class="icon" src="images/search.png" />
-      <input bind:confirm="onConfirm" placeholder-class="in-bar" placeholder="书籍名称" class="bar" auto-focus="{{true}}" />
-      <image class="cancel-img" src="images/cancel.png" />
+      <input value="{{q}}" bind:confirm="onConfirm" placeholder-class="in-bar" placeholder="书籍名称" class="bar" auto-focus="{{true}}" />
+      <image bind:tap="onDelete" class="cancel-img" src="images/cancel.png" />
     </view>
     <view bind:tap="onCancel" class="cancel">取消</view>
   </view>
