--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,8 +1,12 @@
 <view class="container">
   <image src="/images/my/my@bg.png" class="bg" />
-  <v-button open-type="getUserInfo" bind:getuserinfo="onGetUserInfo" class="avatar-position">
+  <v-button wx:if="{{!authorized}}" open-type="getUserInfo" bind:getuserinfo="onGetUserInfo" class="avatar-position">
     <image slot="img" class="avatar" src="/images/my/my.png" />
   </v-button>
+  <view wx:if="{{authorized}}" class="avatar-container avatar-position">
+    <image src="{{userInfo.avatarUrl}}" class="avatar" />
+    <text>{{userInfo.nickName}}</text>
+  </view>
   <view class="about-container">
     <view class="about-us">
       <image src="/images/my/about.png" />
